tools/tests/errors/surf_arity_02.experr
function missing required argument 'b'
